miniextendr-macros/tests/ui/typed_dataframe_missing_type.rs
use miniextendr_macros::typed_dataframe;

typed_dataframe! {
    pub BadDf {
        subject,
    }
}

fn main() {}
